Bug 74556 - LibO CALC crashes when manipulating comments
Summary: LibO CALC crashes when manipulating comments
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: highest critical
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.1
Keywords: regression
: 74776 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-02-05 10:32 UTC by Dominique Boutry
Modified: 2014-02-10 09:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
backtrace of the crash (7.64 KB, text/plain)
2014-02-05 12:17 UTC, sophie
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dominique Boutry 2014-02-05 10:32:13 UTC
Steps to reproduce :
- open a new Spreadsheet,
- fill in a comment for cell A1, then another comment for cell A2,
- quickly press twice on the "Undo" icon.
CALC crashes.
Comment 1 sophie 2014-02-05 10:56:59 UTC
Confirmed with Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71 Ubuntu 13.10 x64 -
I will try to add a backtrace.
Change Plateform, importance, set to New - Sophie
Comment 2 sophie 2014-02-05 12:17:56 UTC
Created attachment 93442 [details]
backtrace of the crash

attaching the bt of the crash - Sophie
Comment 3 Jean-Baptiste Faure 2014-02-05 20:55:31 UTC
Crash reproducible with version 4.2.1.0.0+ (Build ID: 8cab77b3b26a5469d67235dd233d3996a1fa3677) on Ubuntu 13.10 x86-64.

Best regards. JBF
Comment 4 Björn Michaelsen 2014-02-06 00:12:28 UTC
not reproducible on 4.1.4 on Ubuntu 13.10 -- thus a regression.
Comment 5 Kohei Yoshida 2014-02-06 00:22:05 UTC
I'm looking into this.
Comment 6 Kohei Yoshida 2014-02-06 04:00:26 UTC
I think I fixed the originally reported problem, and also fixed a similar crasher during undo and redo after copy and paste.  I'll push my fix shortly.
Comment 7 Commit Notification 2014-02-06 04:03:12 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=771aadfce7d4b0dca678b0722c8f951371816082

fdo#74556: Write test for ReleaseNote().



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-02-06 04:03:25 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe5d604ecf6de4935c622e0e95efc085c4a3cbfd

fdo#74556: Have ReleaseNote() really release note rather than destroying it.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-02-06 04:03:38 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bc504b5adfaeeac0b910b89b0c98ae564f1ff5b8

fdo#74556: Correctly handle note captions life cycles.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Kohei Yoshida 2014-02-06 04:08:30 UTC
For 4.2 backport: https://gerrit.libreoffice.org/7887
Comment 11 Commit Notification 2014-02-06 14:40:06 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a0fe08c6862f5debaa375cc35c6bcec64f1008dc&h=libreoffice-4-2

fdo#74556: Correctly handle note captions life cycles.


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-02-06 14:40:14 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a0fe08c6862f5debaa375cc35c6bcec64f1008dc&h=libreoffice-4-2

fdo#74556: Correctly handle note captions life cycles.


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Kohei Yoshida 2014-02-06 14:48:03 UTC
This is now in 4.2.x.
Comment 14 Jacques Guilleron 2014-02-10 09:48:05 UTC
*** Bug 74776 has been marked as a duplicate of this bug. ***