fdo#74556: Correctly handle note captions life cycles.

When copying notes to clipboard, we don't clone captions but leave them
pointing to the original captions objects. Also, during undo and redo,
we need to clear all caption pointers to prevent them from being deleted
when the ScPostIt objects get deleted. The undo and redo of caption objects
are handled in the drawing layer afterwards.

Also, Have ReleaseNote() really release note rather than destroying it.

(cherry picked from commit fe5d604ecf6de4935c622e0e95efc085c4a3cbfd)
(cherry picked from commit bc504b5adfaeeac0b910b89b0c98ae564f1ff5b8)

Change-Id: Ia1da7784d04a2183f21813b6914e78161aad39d7