sc/inc/table.hxx
@@ -380,9 +380,12 @@ public:
 
     ScPostIt*   GetNote(const SCCOL nCol, const SCROW nRow);
 
+    ScPostIt* ReleaseNote( SCCOL nCol, SCROW nRow );
+
     size_t GetNoteCount( SCCOL nCol ) const;
     SCROW GetNotePosition( SCCOL nCol, size_t nIndex ) const;
     void CreateAllNoteCaptions();
+    void ForgetNoteCaptions( SCCOL nCol1, SCROW nRow1, SCCOL nCol2, SCROW nRow2 );
 
     void GetAllNoteEntries( std::vector<sc::NoteEntry>& rNotes ) const;
     void GetNotesInRange( const ScRange& rRange, std::vector<sc::NoteEntry>& rNotes ) const;
